--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "backend2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,11 +12,11 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.14.0",
-    "@types/express": "^5.0.3",
     "arctic": "^3.7.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "nodemon": "^3.1.10",
     "prisma": "^6.14.0"
   }
 }
